fix: fix errors

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                         <h1 class="name">Shlyakhov Sergey</h1>
                         <p>Programmer</p>
                     </div>
+                </div>
                 <div class="container-title">
                     <div class="container-title-item">
                     <h2 class="head" id="Career">Career objective</h2>
@@ -97,34 +98,34 @@
                         <li>Represented Perficient in 50+ client meetings</li>
                         <li>Attended 100+ weekly stand-u</li>
                     </ol>
-                  </div>
+                </div>
                 <div class="container-title-item">
                   <h2 class="head" id="projects">Projects</h2>
                   <ul>
                     <li>
-                      <a class="link" href="https://sergey-shlyakhov.github.io/rsschool-cv/" target="_blank" rel="nofollow noindex noopener">Project 1</a>
+                      <a class="link" href="https://sergey-shlyakhov.github.io/rsschool-cv/" target="_blank" rel="nofollow noindex noopener">Project RSSchool</a>
                     </li>
                   </ul>
                 </div>
                 <div class="container-title-item">
                     <h2 class="head" id="code-example">Code example</h2>
-                    <pre>
-                        <code>$(".accordion-item").click(function() {
-                        $(".accordion-button").addClass("collapsed").attr("aria-expanded", "false");
-                        $(".accordion-collapse").removeClass("show");
-                        $("html, body").animate({
-                            scrollTop: $(this).offset().top - 105}, 1000);
-                        });</code>
-                    </pre>
-                  </div>
-                  <div class="container-title-item">
+                    <code>
+                      $(".accordion-item").click(function() {<br>
+                          $(".accordion-button").addClass("collapsed").attr("aria-expanded", "false");<br>
+                          $(".accordion-collapse").removeClass("show");<br>
+                          $("html, body").animate({<br>
+                              scrollTop: $(this).offset().top - 105}, 1000);<br>
+                          });<br>
+                    </code>
+                </div>
+                <div class="container-title-item">
                     <h2 class="head" id="languages">Languages</h2>
                     <ul>
                       <li>English - B2</li>
                       <li>Russian - C2</li>
                       <li>Ukrainian - native</li>
                     </ul>
-                  </div>
+                </div>
                 <div class="container-title-item">
                   <h2 class="head" id="education">Education</h2>
                   <ul>
