--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <aside>
               <div class="aside-info">
                 <div class="photo">
-                  <img class="ava" src="assets/img/image.jpg" alt="ava" />
+                  <img class="ava" src="assets/img/image.jpg" alt="ava">
                 </div>
                 <div class="contacts">
                   <h2 id="contacts">Contacts</h2>
@@ -140,13 +140,13 @@
           <footer class="footer">
             <div class="footer container">
                 <div class="footer-item">
-                    <a href="https://github.com/sergey-shlyakhov" target="_blank"><img src="assets/img/github.png" alt="GitHub" title="GitHub" class="git-hub"/></a>
+                    <a href="https://github.com/sergey-shlyakhov" target="_blank"><img src="assets/img/github.png" alt="GitHub" title="GitHub" class="git-hub"></a>
                 </div>
                 <div class="footer-item">
                     <p>&#169; 2022</p>
                 </div>
                 <div class="footer-item">
-                    <a href="https://rs.school/js/" target="_blank"><img src="assets/img/rs_school_js.svg" alt="RS School" title="RS School" class="rss-logo"/></a>
+                    <a href="https://rs.school/js/" target="_blank"><img src="assets/img/rs_school_js.svg" alt="RS School" title="RS School" class="rss-logo"></a>
                 </div>
             </div>
           </footer>
